fix: remove env vars and re-trigger build

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ dag_processor_manager/
 
 # Ignore standalone_admin_password.txt as it contains sensitive information
 standalone_admin_password.txt
+
+#test
