--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,37 +1,24 @@
-# steps:
-# # Install dependencies
-# - name: 'python:3.9'
-#   entrypoint: pip
-#   args: ['install', '-r', 'requirements.txt', '--user']
-
-# # Deploy DAGs
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   args: ['composer', 'environments', 'storage', 'dags', 'import',
-#          '--environment', 'pairs-trading-orchestrator',
-#          '--location', 'europe-west4',
-#          '--source', 'dags']
-
-# # Update environment variables
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   args: ['composer', 'environments', 'update', 'pairs-trading-orchestrator',
-#          '--location', 'europe-west4',
-#          '--update-env-variables', 'AIRFLOW_VAR_POLYGON_API_KEY=${_POLYGON_API_KEY}']
-
-# substitutions:
-#   _POLYGON_API_KEY: 'default_value_replace_me'
-
-# options:
-#   logging: CLOUD_LOGGING_ONLY
-
-
 steps:
+# Deploy DAGs to Composer
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['composer', 'environments', 'update', 'pairs-trading-orchestrator',
-         '--location', 'europe-west4',
-         '--update-env-variables', 'AIRFLOW_VAR_POLYGON_API_KEY=${_POLYGON_API_KEY}']
+  id: 'Deploy DAGs'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    DAGS_BUCKET=$(gcloud composer environments describe ${_COMPOSER_ENV} \
+      --location ${_LOCATION} \
+      --format="get(config.dagGcsPrefix)")
+    if gsutil -m rsync -d -r ./dags gs://$${DAGS_BUCKET}; then
+      echo "Successfully deployed DAGs to Composer"
+    else
+      echo "Failed to deploy DAGs to Composer"
+      exit 1
+    fi
 
 substitutions:
-  _POLYGON_API_KEY: 'default_value_replace_me'
+  _COMPOSER_ENV: 'pairs-trading-orchestrator'
+  _LOCATION: 'europe-west4'
 
 options:
   logging: CLOUD_LOGGING_ONLY
