--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==24.1.0
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
@@ -16,16 +17,19 @@ apache-airflow-providers-sqlite==3.8.2
 apispec==6.6.1
 argcomplete==3.5.0
 asgiref==3.8.1
+asn1crypto==1.5.1
 async-timeout==4.0.3
 attrs==24.2.0
 babel==2.16.0
 blinker==1.8.2
 cachelib==0.9.0
+cachetools==5.5.0
 certifi==2024.7.4
 cffi==1.17.0
 charset-normalizer==3.3.2
 click==8.1.7
 clickclick==20.10.2
+cloud-sql-python-connector==1.12.0
 colorama==0.4.6
 colorlog==6.8.2
 ConfigUpdater==3.2
@@ -51,6 +55,7 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.2.1
 frozenlist==1.4.1
 fsspec==2024.6.1
+google-auth==2.34.0
 google-re2==1.1.20240702
 googleapis-common-protos==1.63.2
 grpcio==1.65.5
@@ -94,10 +99,14 @@ ordered-set==4.1.0
 packaging==24.1
 pathspec==0.12.1
 pendulum==3.0.0
+pg8000==1.31.2
 pluggy==1.5.0
 prison==0.2.1
 protobuf==4.25.4
 psutil==6.0.0
+psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 Pygments==2.18.0
 PyJWT==2.9.0
@@ -114,6 +123,8 @@ rfc3339-validator==0.1.4
 rich==13.7.1
 rich-argparse==1.5.2
 rpds-py==0.20.0
+rsa==4.9
+scramp==1.4.5
 setproctitle==1.3.3
 six==1.16.0
 sniffio==1.3.1
