fix: add steps to build config

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,19 @@
-- name: 'python'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      pip install -r requirements.txt
+steps:
+  - name: 'python'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        pip install -r requirements.txt
 
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      BUCKET=$(gcloud composer environments describe $COMPOSER_ENV --location $LOCATION --format="get(config.dagGcsPrefix)")
-      gsutil -m cp -r dags/* $BUCKET/dags/
-      gsutil -m cp -r plugins/* $BUCKET/plugins/
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        BUCKET=$(gcloud composer environments describe $COMPOSER_ENV --location $LOCATION --format="get(config.dagGcsPrefix)")
+        gsutil -m cp -r dags/* $BUCKET/dags/
+        gsutil -m cp -r plugins/* $BUCKET/plugins/
 
 substitutions:
   _COMPOSER_ENV: 'pairs-trading-orchestrator'
