fix: add curly braces to env vars in build config

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,8 +12,8 @@ steps:
       - '-c'
       - |
         BUCKET=$(gcloud composer environments describe ${_COMPOSER_ENV} --location ${_LOCATION} --format="get(config.dagGcsPrefix)")
-        gsutil -m cp -r dags/* $BUCKET/dags/
-        gsutil -m cp -r plugins/* $BUCKET/plugins/
+        gsutil -m cp -r dags/* ${BUCKET}/dags/
+        gsutil -m cp -r plugins/* ${BUCKET}/plugins/
 
 substitutions:
   _COMPOSER_ENV: 'pairs-trading-orchestrator'
