--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,4 @@
 steps:
-- name: python
-  entrypoint: pip
-  args: ["install", "-r", "requirements.txt", "--user"]
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
   - composer
@@ -19,6 +16,7 @@ steps:
   - update
   - ${_COMPOSER_ENV}
   - --location=${_LOCATION}
+  - --update-pypi-packages-from-file=requirements.txt
 
 substitutions:
   _COMPOSER_ENV: 'pairs-trading-orchestrator'
