--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,16 @@ aiohttp==3.10.5
 aiosignal==1.3.1
 alembic==1.13.2
 anyio==4.4.0
+apache-airflow==2.10.0
+apache-airflow-providers-common-compat==1.1.0
+apache-airflow-providers-common-io==1.4.0
+apache-airflow-providers-common-sql==1.15.0
+apache-airflow-providers-fab==1.2.2
+apache-airflow-providers-ftp==3.10.1
+apache-airflow-providers-http==4.12.0
+apache-airflow-providers-imap==3.6.1
+apache-airflow-providers-smtp==1.7.1
+apache-airflow-providers-sqlite==3.8.2
 apispec==6.6.1
 argcomplete==3.5.0
 asgiref==3.8.1
